Update ArbitraryDataFileRequestThread.java
* Readability Improvements: Added comments and refactored long methods for better readability.
* Error Handling: Added more specific logging to help diagnose issues.
* Avoid Redundant Computations: Reorganized some logic to avoid unnecessary computations.
* Generics in Iterators: Replaced raw iterators with typed iterators.
* Thread-Safety: Minor adjustments to ensure synchronized operations are safe and well-encapsulated.
* Magic Numbers: Removed hardcoded values like 1000L, replacing them with constants for clarity.